// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`courses page does not show empty state when at least one course is found 1`] = `
[
  <div
    className="flex w-screen h-screen text-gray-700"
  >
    <main
      className="relative min-h-screen bg-gradient-to-br from-[#c8e5ec] to-[white] overflow-hidden"
    >
      <nav
        className="flex fixed w-full items-center justify-between py-3 px-6"
        style={
          {
            "background": "var(--secondary, #F1F9FB)",
            "boxShadow": "0px 4px 4px 0px rgba(35, 100, 130, 0.25)",
          }
        }
      >
        <div
          className="w-[165.25px] h-6 justify-start items-center gap-[7.52px] flex py-6 px-8"
        >
          <div
            className="navbar-start"
          >
            <a
              className="w-[165.25px] h-6 justify-start items-center gap-[6px] inline-flex space-x-1 normal-case text-xl"
              href="/"
              onClick={[Function]}
            >
              <img
                alt="logo"
                className="w-[24.43px] h-6"
                src="/logo.svg"
              />
               
              <img
                alt="educado"
                className="h-6"
                src="/educado.svg"
              />
            </a>
          </div>
        </div>
        <div
          className="navbar-center hidden lg:flex"
        >
          <ul
            className="menu menu-horizontal p-0"
          >
            <li>
              <a
                className="flex tooltip tooltip-hover tooltip-bottom text-lg font-['Montserrat'] active:bg-[#166276]"
                data-tip="Veja seus cursos"
                href="/courses"
                onClick={[Function]}
              >
                 
                <svg
                  role="presentation"
                  style={
                    {
                      "height": "1.5rem",
                      "width": "1.5rem",
                    }
                  }
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M17,4V10L15,8L13,10V4H9V20H19V4H17M3,7V5H5V4C5,2.89 5.9,2 7,2H19C20.05,2 21,2.95 21,4V20C21,21.05 20.05,22 19,22H7C5.95,22 5,21.05 5,20V19H3V17H5V13H3V11H5V7H3M5,5V7H7V5H5M5,19H7V17H5V19M5,13H7V11H5V13Z"
                    style={
                      {
                        "fill": "#A1ACB2",
                      }
                    }
                  />
                </svg>
                 
                <span>
                  Cursos
                </span>
                 
              </a>
            </li>
            <li>
              <a
                className="flex tooltip tooltip-hover text-lg tooltip-bottom font-['Montserrat'] active:bg-[#166276]"
                data-tip="Verifique os aplicativos"
                href="/educado_admin/applications"
                onClick={[Function]}
              >
                 
                <svg
                  role="presentation"
                  style={
                    {
                      "height": "1.5rem",
                      "width": "1.5rem",
                    }
                  }
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12,4A4,4 0 0,1 16,8A4,4 0 0,1 12,12A4,4 0 0,1 8,8A4,4 0 0,1 12,4M12,14C16.42,14 20,15.79 20,18V20H4V18C4,15.79 7.58,14 12,14Z"
                    style={
                      {
                        "fill": "#A1ACB2",
                      }
                    }
                  />
                </svg>
                <span>
                  Admin
                </span>
                 
              </a>
            </li>
          </ul>
        </div>
        <div
          className="relative w-133px h-10 flex items-center gap-6 pr-12"
        >
          <span
            className="hidden sm:block container overflow-hidden"
          >
            <svg
              role="presentation"
              style={
                {
                  "height": "1.5rem",
                  "width": "1.5rem",
                }
              }
              viewBox="0 0 24 24"
            >
              <path
                d="M10 21H14C14 22.1 13.1 23 12 23S10 22.1 10 21M21 19V20H3V19L5 17V11C5 7.9 7 5.2 10 4.3V4C10 2.9 10.9 2 12 2S14 2.9 14 4V4.3C17 5.2 19 7.9 19 11V17L21 19M17 11C17 8.2 14.8 6 12 6S7 8.2 7 11V18H17V11Z"
                style={
                  {
                    "fill": "#A1ACB2",
                  }
                }
              />
            </svg>
          </span>
          <div
            className="flex flex-col items-start"
          >
            <span
              className="hidden sm:block container overflow-hidden text-[#A1ACB2] text-base font-bold font-['Montserrat']"
            >
              Firstname Lastname
            </span>
            <span
              className="hidden sm:block container overflow-hidden text-[#A1ACB2] text-sm font-normal font-['Montserrat']"
            >
              mail@mail.com
            </span>
          </div>
          <button
            className="relative flex flex-col items-start gap-6"
          >
            <div
              className="dropdown dropdown-end"
            >
              <label
                className="btn btn-ghost hover:bg-transparent"
                tabIndex={0}
              >
                <div
                  className="avatar placeholder"
                >
                  <div
                    className="bg-[#166276] text-white rounded-full hover:rounded w-11"
                  >
                    <span
                      className="text-md"
                    >
                      FL
                    </span>
                  </div>
                </div>
              </label>
              <ul
                className="menu dropdown-content flex flex-col items-start p-2 absolute w-[245px] mt-2 bg-[#FFFFFF] rounded-lg"
                style={
                  {
                    "background": "var(--secondary, #FFFFFF)",
                    "boxShadow": "0px 2px 4px 0px #B3B3B3",
                  }
                }
                tabIndex={0}
              >
                <li
                  className="w-full"
                >
                   
                  <a
                    className="text-[#383838] text-lg font-normal font-['Montserrat'] hover:bg-[#E4E4E4]"
                    href="/profile"
                    onClick={[Function]}
                  >
                    <span>
                      <svg
                        role="presentation"
                        style={
                          {
                            "height": "1.5rem",
                            "width": "1.5rem",
                          }
                        }
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M10 4A4 4 0 0 0 6 8A4 4 0 0 0 10 12A4 4 0 0 0 14 8A4 4 0 0 0 10 4M17 12C16.87 12 16.76 12.09 16.74 12.21L16.55 13.53C16.25 13.66 15.96 13.82 15.7 14L14.46 13.5C14.35 13.5 14.22 13.5 14.15 13.63L13.15 15.36C13.09 15.47 13.11 15.6 13.21 15.68L14.27 16.5C14.25 16.67 14.24 16.83 14.24 17C14.24 17.17 14.25 17.33 14.27 17.5L13.21 18.32C13.12 18.4 13.09 18.53 13.15 18.64L14.15 20.37C14.21 20.5 14.34 20.5 14.46 20.5L15.7 20C15.96 20.18 16.24 20.35 16.55 20.47L16.74 21.79C16.76 21.91 16.86 22 17 22H19C19.11 22 19.22 21.91 19.24 21.79L19.43 20.47C19.73 20.34 20 20.18 20.27 20L21.5 20.5C21.63 20.5 21.76 20.5 21.83 20.37L22.83 18.64C22.89 18.53 22.86 18.4 22.77 18.32L21.7 17.5C21.72 17.33 21.74 17.17 21.74 17C21.74 16.83 21.73 16.67 21.7 16.5L22.76 15.68C22.85 15.6 22.88 15.47 22.82 15.36L21.82 13.63C21.76 13.5 21.63 13.5 21.5 13.5L20.27 14C20 13.82 19.73 13.65 19.42 13.53L19.23 12.21C19.22 12.09 19.11 12 19 12H17M10 14C5.58 14 2 15.79 2 18V20H11.68A7 7 0 0 1 11 17A7 7 0 0 1 11.64 14.09C11.11 14.03 10.56 14 10 14M18 15.5C18.83 15.5 19.5 16.17 19.5 17C19.5 17.83 18.83 18.5 18 18.5C17.16 18.5 16.5 17.83 16.5 17C16.5 16.17 17.17 15.5 18 15.5Z"
                          style={
                            {
                              "fill": "#A1ACB2",
                            }
                          }
                        />
                      </svg>
                    </span>
                    <span>
                      Editar perfil
                    </span>
                  </a>
                </li>
                <hr
                  className="relative w-full h-[1px] border-[#E4E4E4] mt-3 mb-3"
                />
                <li
                  className="w-full"
                >
                   
                  <a
                    className="text-[#383838] text-lg font-normal font-['Montserrat'] hover:bg-[#E4E4E4]"
                    href="/courses"
                    onClick={[Function]}
                  >
                    <span>
                      <svg
                        role="presentation"
                        style={
                          {
                            "height": "1.5rem",
                            "width": "1.5rem",
                          }
                        }
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M4,3C2.89,3 2,3.89 2,5V15A2,2 0 0,0 4,17H12V22L15,19L18,22V17H20A2,2 0 0,0 22,15V8L22,6V5A2,2 0 0,0 20,3H16V3H4M12,5L15,7L18,5V8.5L21,10L18,11.5V15L15,13L12,15V11.5L9,10L12,8.5V5M4,5H9V7H4V5M4,9H7V11H4V9M4,13H9V15H4V13Z"
                          style={
                            {
                              "fill": "#A1ACB2",
                            }
                          }
                        />
                      </svg>
                    </span>
                    <span>
                      Meus certificados
                    </span>
                  </a>
                </li>
                <hr
                  className="relative w-full h-[1px] border-[#E4E4E4] mt-3 mb-3"
                />
                <li
                  className="w-full"
                >
                   
                  <a
                    className=" text-[#FF4949] text-lg font-bold font-['Montserrat'] hover:bg-[#E4E4E4]"
                    href="/welcome"
                    onClick={[Function]}
                  >
                    <span>
                      <svg
                        role="presentation"
                        style={
                          {
                            "height": "1.5rem",
                            "width": "1.5rem",
                          }
                        }
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M14.08,15.59L16.67,13H7V11H16.67L14.08,8.41L15.5,7L20.5,12L15.5,17L14.08,15.59M19,3A2,2 0 0,1 21,5V9.67L19,7.67V5H5V19H19V16.33L21,14.33V19A2,2 0 0,1 19,21H5C3.89,21 3,20.1 3,19V5C3,3.89 3.89,3 5,3H19Z"
                          style={
                            {
                              "fill": "#FF4949",
                            }
                          }
                        />
                      </svg>
                    </span>
                    <span>
                      Sair
                    </span>
                  </a>
                </li>
              </ul>
            </div>
          </button>
        </div>
      </nav>
    </main>
    <main
      className="flex-grow overflow-x-hidden bg-gradient-to-br from-[#c8e5ec] to-[white]"
    >
      <div
        className="relative h-20 w-32 ..."
      />
      <div
        className="grid lg:grid-cols-[3fr_1fr] h-full"
      >
        <div
          className="m-8 p-8 pb-0 bg-white rounded-xl overflow-hidden flex flex-col"
        >
          <div
            className="flex flex-row no-wrap"
          >
            <h1
              className="text-3xl font-bold flex-1"
            >
              Confira seus cursos
            </h1>
            <label
              className="std-button flex modal-button  space-x-2"
              htmlFor="course-create"
            >
              <svg
                aria-hidden="true"
                className="w-5 h-5"
                fill="none"
                stroke="currentColor"
                strokeWidth={1.5}
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M16.862 4.487l1.687-1.688a1.875 1.875 0 112.652 2.652L10.582 16.07a4.5 4.5 0 01-1.897 1.13L6 18l.8-2.685a4.5 4.5 0 011.13-1.897l8.932-8.931zm0 0L19.5 7.125M18 14v4.75A2.25 2.25 0 0115.75 21H5.25A2.25 2.25 0 013 18.75V8.25A2.25 2.25 0 015.25 6H10"
                  strokeLinecap="round"
                  strokeLinejoin="round"
                />
              </svg>
              <p
                className="font-normal "
              >
                Criar novo curso
              </p>
               
            </label>
            <input
              className="modal-toggle"
              id="course-create"
              type="checkbox"
            />
            <div
              className="modal"
              id="course-create-modal"
            >
              <div
                className="modal-box bg-gradient-to-b from-primaryLight rounded w-11/12 max-w-xl"
              >
                <h3
                  className="font-bold text-lg"
                >
                  Crie seu novo curso!
                </h3>
                 
                <p
                  className="py-4"
                >
                  Preencha o formulário e comece seu novo curso!
                </p>
                 
                <form
                  className="flex h-full flex-col justify-between space-y-4"
                  onSubmit={[Function]}
                >
                  <div
                    className="flex flex-col space-y-2 text-left"
                  >
                    <label
                      htmlFor="title"
                    >
                      Título
                    </label>
                     
                    <input
                      className="form-field focus:outline-none focus:ring-2 focus:ring-primary focus:border-transparent"
                      defaultValue=""
                      name="title"
                      onBlur={[Function]}
                      onChange={[Function]}
                      type="text"
                    />
                     
                  </div>
                  <div
                    className="flex flex-col space-y-2 text-left"
                  >
                    <label
                      htmlFor="category"
                    >
                      Categoria
                    </label>
                     
                    <select
                      className="form-field focus:outline-none focus:ring-2 focus:ring-primary focus:border-transparent"
                      defaultValue="personal finance"
                      name="category"
                      onBlur={[Function]}
                      onChange={[Function]}
                    >
                      <option
                        value="personal finance"
                      >
                        Finanças pessoais
                      </option>
                      <option
                        value="health and workplace safety"
                      >
                        Saúde e Segurança no Trabalho
                      </option>
                      <option
                        value="sewing"
                      >
                        Costura
                      </option>
                      <option
                        value="electronics"
                      >
                        Eletrônica
                      </option>
                    </select>
                     
                  </div>
                  <div
                    className="flex items-center gap-8 w-full mt-8"
                  >
                    <div
                      className="flex flex-col space-y-2 text-left"
                    >
                      <label
                        htmlFor="cover-image"
                      >
                        Imagem de capa
                      </label>
                       
                      <div>
                        <div
                          className="mt-1 flex justify-center rounded-md border-2 border-dashed border-gray-600 px-10 pt-5 pb-6"
                        >
                          <div
                            className="space-y-1 text-center"
                          >
                            <svg
                              aria-hidden="true"
                              className="mx-auto h-6 w-6 text-gray-600"
                              fill="none"
                              stroke="currentColor"
                              viewBox="0 0 48 48"
                            >
                              <path
                                d="M28 8H12a4 4 0 00-4 4v20m32-12v8m0 0v8a4 4 0 01-4 4H12a4 4 0 01-4-4v-4m32-4l-3.172-3.172a4 4 0 00-5.656 0L28 28M8 32l9.172-9.172a4 4 0 015.656 0L28 28m0 0l4 4m4-24h8m-4-4v8m-12 4h.02"
                                strokeLinecap="round"
                                strokeLinejoin="round"
                                strokeWidth={2}
                              />
                            </svg>
                            <div
                              className="flex text-sm text-gray-600"
                            >
                              <label
                                className="relative cursor-pointer rounded-md  font-medium text-primary focus-within:outline-none focus-within:ring-2 focus-within:ring-primary focus-within:ring-offset-2 hover:text-primaryHover"
                                htmlFor="file-upload"
                              >
                                <span>
                                  Upload a file 
                                </span>
                                <input
                                  accept="image/*"
                                  className="sr-only"
                                  id="file-upload"
                                  name="file-upload"
                                  onChange={[Function]}
                                  type="file"
                                />
                              </label>
                            </div>
                          </div>
                        </div>
                      </div>
                       
                       
                    </div>
                    <div
                      className="flex flex-col space-y-2 text-left"
                    >
                      <label
                        htmlFor="level"
                      >
                        Nível
                      </label>
                       
                      <select
                        className="small-form-field focus:outline-none focus:ring-2 focus:ring-primary focus:border-transparent"
                        name="difficulty"
                        onBlur={[Function]}
                        onChange={[Function]}
                      >
                        <option
                          value={1}
                        >
                          Iniciante 
                        </option>
                         
                        <option
                          value={2}
                        >
                          Intermediário
                        </option>
                         
                        <option
                          value={3}
                        >
                          Avançado 
                        </option>
                         
                      </select>
                       
                    </div>
                    <div
                      className="flex flex-col space-y-2 text-left"
                    >
                      <label
                        htmlFor="title"
                      >
                        Tempo estimado
                      </label>
                       
                      <input
                        className="form-field focus:outline-none focus:ring-2 focus:ring-primary focus:border-transparent"
                        defaultValue=""
                        min={0}
                        name="estimatedHours"
                        onBlur={[Function]}
                        onChange={[Function]}
                        step={1}
                        type="number"
                      />
                       
                    </div>
                  </div>
                  <div
                    className="flex flex-col space-y-2 text-left"
                  >
                    <label
                      htmlFor="description"
                    >
                      Descrição
                    </label>
                     
                    <textarea
                      className="resize-none form-field focus:outline-none focus:ring-2 focus:ring-primary focus:border-transparent"
                      defaultValue=""
                      name="description"
                      onBlur={[Function]}
                      onChange={[Function]}
                      rows={4}
                    />
                     
                  </div>
                  <div
                    className="modal-action"
                  >
                    <div
                      className="flex items-center justify-between gap-4 w-full mt-8"
                    >
                      <label
                        className=" bg-primary hover:bg-primaryHover border border-primary focus:ring-blue-500 focus:ring-offset-blue-200 text-white w-full transition ease-in duration-200 text-center text-base font-semibold shadow-md focus:outline-none focus:ring-2 focus:ring-offset-2  rounded"
                        htmlFor="course-create"
                      >
                        <button
                          className="py-2 px-4 h-full w-full"
                          type="submit"
                        >
                          Criar 
                        </button>
                      </label>
                      <label
                        className="py-2 px-4 bg-white hover:bg-gray-100 border border-primary  hover:border-primaryHover hover:text-primaryHover  text-primary w-full transition ease-in duration-200 text-center text-base font-semibold shadow-md focus:outline-none focus:ring-2 focus:ring-offset-2  rounded"
                        htmlFor="course-create"
                      >
                        Cancelar 
                      </label>
                    </div>
                  </div>
                </form>
              </div>
            </div>
          </div>
          <div
            className="h-10 my-8 bg-grayLight"
          />
          <div
            className="overflow-y-scroll no-scrollbar"
          >
            <div
              className="grid grid-cols-1 md:grid-cols-2 xl:grid-cols-3 3xl:grid-cols-4 gap-6 pb-4"
            >
              <div>
                CourseListCard
              </div>
            </div>
          </div>
        </div>
        <div
          className="m-8 hidden lg:block"
        >
          <div
            className="w-full h-full"
          >
            <h2
              className="text-xl font-bold"
            >
              Olá 
              Test User
            </h2>
            <div
              className="border-y-[1px] border-grayMedium my-4 py-4"
            >
              <div
                className="grid grid-cols-4 lg:grid-cols-1 gap-y-4"
              >
                <div>
                  <div
                    className="flex flex-row gap-2"
                  >
                    <div
                      className="w-3 h-3 rounded-full my-auto bg-success"
                    />
                    <p>
                      Publicado
                       cursos:
                    </p>
                    <p
                      className="font-bold"
                    >
                      0
                    </p>
                  </div>
                  <div
                    className="flex flex-row gap-2"
                  >
                    <div
                      className="w-3 h-3 rounded-full my-auto bg-[#ffc500]"
                    />
                    <p>
                      Rascunho
                       cursos:
                    </p>
                    <p
                      className="font-bold"
                    >
                      1
                    </p>
                  </div>
                  <div
                    className="flex flex-row gap-2"
                  >
                    <div
                      className="w-3 h-3 rounded-full my-auto bg-grayMedium"
                    />
                    <p>
                      Oculto
                       cursos:
                    </p>
                    <p
                      className="font-bold"
                    >
                      0
                    </p>
                  </div>
                  <div
                    className="flex flex-row gap-2 ml-5"
                  >
                    <p>
                      Total cursos:
                    </p>
                    <p
                      className="font-bold"
                      id="courseAmount"
                    >
                      1
                    </p>
                  </div>
                </div>
                <div>
                  <p>
                    Total alunos
                  </p>
                  <p
                    className="font-bold"
                    id="subscribers"
                  >
                    157
                  </p>
                </div>
                <div>
                  <p>
                    Avaliação
                  </p>
                  <div
                    className="w-[12rem] max-w-full"
                  >
                    <div
                      className="flex flex-row"
                    >
                      <svg
                        className="text-star"
                        role="presentation"
                        style={{}}
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M12,17.27L18.18,21L16.54,13.97L22,9.24L14.81,8.62L12,2L9.19,8.62L2,9.24L7.45,13.97L5.82,21L12,17.27Z"
                          style={
                            {
                              "fill": "currentColor",
                            }
                          }
                        />
                      </svg>
                      <svg
                        className="text-star"
                        role="presentation"
                        style={{}}
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M12,17.27L18.18,21L16.54,13.97L22,9.24L14.81,8.62L12,2L9.19,8.62L2,9.24L7.45,13.97L5.82,21L12,17.27Z"
                          style={
                            {
                              "fill": "currentColor",
                            }
                          }
                        />
                      </svg>
                      <svg
                        className="text-star"
                        role="presentation"
                        style={{}}
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M12,17.27L18.18,21L16.54,13.97L22,9.24L14.81,8.62L12,2L9.19,8.62L2,9.24L7.45,13.97L5.82,21L12,17.27Z"
                          style={
                            {
                              "fill": "currentColor",
                            }
                          }
                        />
                      </svg>
                      <svg
                        className="text-star"
                        role="presentation"
                        style={{}}
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M12,17.27L18.18,21L16.54,13.97L22,9.24L14.81,8.62L12,2L9.19,8.62L2,9.24L7.45,13.97L5.82,21L12,17.27Z"
                          style={
                            {
                              "fill": "currentColor",
                            }
                          }
                        />
                      </svg>
                      <svg
                        className="text-star"
                        role="presentation"
                        style={{}}
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M12,15.4V6.1L13.71,10.13L18.09,10.5L14.77,13.39L15.76,17.67M22,9.24L14.81,8.63L12,2L9.19,8.63L2,9.24L7.45,13.97L5.82,21L12,17.27L18.18,21L16.54,13.97L22,9.24Z"
                          style={
                            {
                              "fill": "currentColor",
                            }
                          }
                        />
                      </svg>
                      <p
                        className="text-star ml-1 text-2xl font-bold"
                      >
                        4.5
                      </p>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div>
              <p
                className="font-bold"
              >
                Atividades
              </p>
               
              <div
                className="grid grid-cols-4 lg:grid-cols-1 gap-y-2"
              />
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>,
  <div
    className="Toastify"
  />,
]
`;

exports[`courses page shows empty state when no courses are found 1`] = `
[
  <div
    className="flex w-screen h-screen text-gray-700"
  >
    <main
      className="relative min-h-screen bg-gradient-to-br from-[#c8e5ec] to-[white] overflow-hidden"
    >
      <nav
        className="flex fixed w-full items-center justify-between py-3 px-6"
        style={
          {
            "background": "var(--secondary, #F1F9FB)",
            "boxShadow": "0px 4px 4px 0px rgba(35, 100, 130, 0.25)",
          }
        }
      >
        <div
          className="w-[165.25px] h-6 justify-start items-center gap-[7.52px] flex py-6 px-8"
        >
          <div
            className="navbar-start"
          >
            <a
              className="w-[165.25px] h-6 justify-start items-center gap-[6px] inline-flex space-x-1 normal-case text-xl"
              href="/"
              onClick={[Function]}
            >
              <img
                alt="logo"
                className="w-[24.43px] h-6"
                src="/logo.svg"
              />
               
              <img
                alt="educado"
                className="h-6"
                src="/educado.svg"
              />
            </a>
          </div>
        </div>
        <div
          className="navbar-center hidden lg:flex"
        >
          <ul
            className="menu menu-horizontal p-0"
          >
            <li>
              <a
                className="flex tooltip tooltip-hover tooltip-bottom text-lg font-['Montserrat'] active:bg-[#166276]"
                data-tip="Veja seus cursos"
                href="/courses"
                onClick={[Function]}
              >
                 
                <svg
                  role="presentation"
                  style={
                    {
                      "height": "1.5rem",
                      "width": "1.5rem",
                    }
                  }
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M17,4V10L15,8L13,10V4H9V20H19V4H17M3,7V5H5V4C5,2.89 5.9,2 7,2H19C20.05,2 21,2.95 21,4V20C21,21.05 20.05,22 19,22H7C5.95,22 5,21.05 5,20V19H3V17H5V13H3V11H5V7H3M5,5V7H7V5H5M5,19H7V17H5V19M5,13H7V11H5V13Z"
                    style={
                      {
                        "fill": "#A1ACB2",
                      }
                    }
                  />
                </svg>
                 
                <span>
                  Cursos
                </span>
                 
              </a>
            </li>
            <li>
              <a
                className="flex tooltip tooltip-hover text-lg tooltip-bottom font-['Montserrat'] active:bg-[#166276]"
                data-tip="Verifique os aplicativos"
                href="/educado_admin/applications"
                onClick={[Function]}
              >
                 
                <svg
                  role="presentation"
                  style={
                    {
                      "height": "1.5rem",
                      "width": "1.5rem",
                    }
                  }
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12,4A4,4 0 0,1 16,8A4,4 0 0,1 12,12A4,4 0 0,1 8,8A4,4 0 0,1 12,4M12,14C16.42,14 20,15.79 20,18V20H4V18C4,15.79 7.58,14 12,14Z"
                    style={
                      {
                        "fill": "#A1ACB2",
                      }
                    }
                  />
                </svg>
                <span>
                  Admin
                </span>
                 
              </a>
            </li>
          </ul>
        </div>
        <div
          className="relative w-133px h-10 flex items-center gap-6 pr-12"
        >
          <span
            className="hidden sm:block container overflow-hidden"
          >
            <svg
              role="presentation"
              style={
                {
                  "height": "1.5rem",
                  "width": "1.5rem",
                }
              }
              viewBox="0 0 24 24"
            >
              <path
                d="M10 21H14C14 22.1 13.1 23 12 23S10 22.1 10 21M21 19V20H3V19L5 17V11C5 7.9 7 5.2 10 4.3V4C10 2.9 10.9 2 12 2S14 2.9 14 4V4.3C17 5.2 19 7.9 19 11V17L21 19M17 11C17 8.2 14.8 6 12 6S7 8.2 7 11V18H17V11Z"
                style={
                  {
                    "fill": "#A1ACB2",
                  }
                }
              />
            </svg>
          </span>
          <div
            className="flex flex-col items-start"
          >
            <span
              className="hidden sm:block container overflow-hidden text-[#A1ACB2] text-base font-bold font-['Montserrat']"
            >
              Firstname Lastname
            </span>
            <span
              className="hidden sm:block container overflow-hidden text-[#A1ACB2] text-sm font-normal font-['Montserrat']"
            >
              mail@mail.com
            </span>
          </div>
          <button
            className="relative flex flex-col items-start gap-6"
          >
            <div
              className="dropdown dropdown-end"
            >
              <label
                className="btn btn-ghost hover:bg-transparent"
                tabIndex={0}
              >
                <div
                  className="avatar placeholder"
                >
                  <div
                    className="bg-[#166276] text-white rounded-full hover:rounded w-11"
                  >
                    <span
                      className="text-md"
                    >
                      FL
                    </span>
                  </div>
                </div>
              </label>
              <ul
                className="menu dropdown-content flex flex-col items-start p-2 absolute w-[245px] mt-2 bg-[#FFFFFF] rounded-lg"
                style={
                  {
                    "background": "var(--secondary, #FFFFFF)",
                    "boxShadow": "0px 2px 4px 0px #B3B3B3",
                  }
                }
                tabIndex={0}
              >
                <li
                  className="w-full"
                >
                   
                  <a
                    className="text-[#383838] text-lg font-normal font-['Montserrat'] hover:bg-[#E4E4E4]"
                    href="/profile"
                    onClick={[Function]}
                  >
                    <span>
                      <svg
                        role="presentation"
                        style={
                          {
                            "height": "1.5rem",
                            "width": "1.5rem",
                          }
                        }
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M10 4A4 4 0 0 0 6 8A4 4 0 0 0 10 12A4 4 0 0 0 14 8A4 4 0 0 0 10 4M17 12C16.87 12 16.76 12.09 16.74 12.21L16.55 13.53C16.25 13.66 15.96 13.82 15.7 14L14.46 13.5C14.35 13.5 14.22 13.5 14.15 13.63L13.15 15.36C13.09 15.47 13.11 15.6 13.21 15.68L14.27 16.5C14.25 16.67 14.24 16.83 14.24 17C14.24 17.17 14.25 17.33 14.27 17.5L13.21 18.32C13.12 18.4 13.09 18.53 13.15 18.64L14.15 20.37C14.21 20.5 14.34 20.5 14.46 20.5L15.7 20C15.96 20.18 16.24 20.35 16.55 20.47L16.74 21.79C16.76 21.91 16.86 22 17 22H19C19.11 22 19.22 21.91 19.24 21.79L19.43 20.47C19.73 20.34 20 20.18 20.27 20L21.5 20.5C21.63 20.5 21.76 20.5 21.83 20.37L22.83 18.64C22.89 18.53 22.86 18.4 22.77 18.32L21.7 17.5C21.72 17.33 21.74 17.17 21.74 17C21.74 16.83 21.73 16.67 21.7 16.5L22.76 15.68C22.85 15.6 22.88 15.47 22.82 15.36L21.82 13.63C21.76 13.5 21.63 13.5 21.5 13.5L20.27 14C20 13.82 19.73 13.65 19.42 13.53L19.23 12.21C19.22 12.09 19.11 12 19 12H17M10 14C5.58 14 2 15.79 2 18V20H11.68A7 7 0 0 1 11 17A7 7 0 0 1 11.64 14.09C11.11 14.03 10.56 14 10 14M18 15.5C18.83 15.5 19.5 16.17 19.5 17C19.5 17.83 18.83 18.5 18 18.5C17.16 18.5 16.5 17.83 16.5 17C16.5 16.17 17.17 15.5 18 15.5Z"
                          style={
                            {
                              "fill": "#A1ACB2",
                            }
                          }
                        />
                      </svg>
                    </span>
                    <span>
                      Editar perfil
                    </span>
                  </a>
                </li>
                <hr
                  className="relative w-full h-[1px] border-[#E4E4E4] mt-3 mb-3"
                />
                <li
                  className="w-full"
                >
                   
                  <a
                    className="text-[#383838] text-lg font-normal font-['Montserrat'] hover:bg-[#E4E4E4]"
                    href="/courses"
                    onClick={[Function]}
                  >
                    <span>
                      <svg
                        role="presentation"
                        style={
                          {
                            "height": "1.5rem",
                            "width": "1.5rem",
                          }
                        }
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M4,3C2.89,3 2,3.89 2,5V15A2,2 0 0,0 4,17H12V22L15,19L18,22V17H20A2,2 0 0,0 22,15V8L22,6V5A2,2 0 0,0 20,3H16V3H4M12,5L15,7L18,5V8.5L21,10L18,11.5V15L15,13L12,15V11.5L9,10L12,8.5V5M4,5H9V7H4V5M4,9H7V11H4V9M4,13H9V15H4V13Z"
                          style={
                            {
                              "fill": "#A1ACB2",
                            }
                          }
                        />
                      </svg>
                    </span>
                    <span>
                      Meus certificados
                    </span>
                  </a>
                </li>
                <hr
                  className="relative w-full h-[1px] border-[#E4E4E4] mt-3 mb-3"
                />
                <li
                  className="w-full"
                >
                   
                  <a
                    className=" text-[#FF4949] text-lg font-bold font-['Montserrat'] hover:bg-[#E4E4E4]"
                    href="/welcome"
                    onClick={[Function]}
                  >
                    <span>
                      <svg
                        role="presentation"
                        style={
                          {
                            "height": "1.5rem",
                            "width": "1.5rem",
                          }
                        }
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M14.08,15.59L16.67,13H7V11H16.67L14.08,8.41L15.5,7L20.5,12L15.5,17L14.08,15.59M19,3A2,2 0 0,1 21,5V9.67L19,7.67V5H5V19H19V16.33L21,14.33V19A2,2 0 0,1 19,21H5C3.89,21 3,20.1 3,19V5C3,3.89 3.89,3 5,3H19Z"
                          style={
                            {
                              "fill": "#FF4949",
                            }
                          }
                        />
                      </svg>
                    </span>
                    <span>
                      Sair
                    </span>
                  </a>
                </li>
              </ul>
            </div>
          </button>
        </div>
      </nav>
    </main>
    <main
      className="flex-grow overflow-x-hidden bg-gradient-to-br from-[#c8e5ec] to-[white]"
    >
      <div
        className="relative h-20 w-32 ..."
      />
      <div
        className="grid lg:grid-cols-[3fr_1fr] h-full"
      >
        <div
          className="m-8 p-8 pb-0 bg-white rounded-xl overflow-hidden flex flex-col"
        >
          <div
            className="grid place-content-center w-full h-full text-center"
          >
            <div
              className="md:mx-40 xl:mx-64"
            >
              <img
                className="w-full"
                src=""
              />
              <h1
                className="text-xl font-bold my-4"
              >
                Comece agora
              </h1>
              <p>
                Você ainda não criou nenhum curso. Clique no botão abaixo e siga o passo a passo para desenolver o seu primeiro curso.
              </p>
              <label
                className="std-button flex modal-button  space-x-2"
                htmlFor="course-create"
              >
                <svg
                  aria-hidden="true"
                  className="w-5 h-5"
                  fill="none"
                  stroke="currentColor"
                  strokeWidth={1.5}
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M16.862 4.487l1.687-1.688a1.875 1.875 0 112.652 2.652L10.582 16.07a4.5 4.5 0 01-1.897 1.13L6 18l.8-2.685a4.5 4.5 0 011.13-1.897l8.932-8.931zm0 0L19.5 7.125M18 14v4.75A2.25 2.25 0 0115.75 21H5.25A2.25 2.25 0 013 18.75V8.25A2.25 2.25 0 015.25 6H10"
                    strokeLinecap="round"
                    strokeLinejoin="round"
                  />
                </svg>
                <p
                  className="font-normal "
                >
                  Criar novo curso
                </p>
                 
              </label>
              <input
                className="modal-toggle"
                id="course-create"
                type="checkbox"
              />
              <div
                className="modal"
                id="course-create-modal"
              >
                <div
                  className="modal-box bg-gradient-to-b from-primaryLight rounded w-11/12 max-w-xl"
                >
                  <h3
                    className="font-bold text-lg"
                  >
                    Crie seu novo curso!
                  </h3>
                   
                  <p
                    className="py-4"
                  >
                    Preencha o formulário e comece seu novo curso!
                  </p>
                   
                  <form
                    className="flex h-full flex-col justify-between space-y-4"
                    onSubmit={[Function]}
                  >
                    <div
                      className="flex flex-col space-y-2 text-left"
                    >
                      <label
                        htmlFor="title"
                      >
                        Título
                      </label>
                       
                      <input
                        className="form-field focus:outline-none focus:ring-2 focus:ring-primary focus:border-transparent"
                        defaultValue=""
                        name="title"
                        onBlur={[Function]}
                        onChange={[Function]}
                        type="text"
                      />
                       
                    </div>
                    <div
                      className="flex flex-col space-y-2 text-left"
                    >
                      <label
                        htmlFor="category"
                      >
                        Categoria
                      </label>
                       
                      <select
                        className="form-field focus:outline-none focus:ring-2 focus:ring-primary focus:border-transparent"
                        defaultValue="personal finance"
                        name="category"
                        onBlur={[Function]}
                        onChange={[Function]}
                      >
                        <option
                          value="personal finance"
                        >
                          Finanças pessoais
                        </option>
                        <option
                          value="health and workplace safety"
                        >
                          Saúde e Segurança no Trabalho
                        </option>
                        <option
                          value="sewing"
                        >
                          Costura
                        </option>
                        <option
                          value="electronics"
                        >
                          Eletrônica
                        </option>
                      </select>
                       
                    </div>
                    <div
                      className="flex items-center gap-8 w-full mt-8"
                    >
                      <div
                        className="flex flex-col space-y-2 text-left"
                      >
                        <label
                          htmlFor="cover-image"
                        >
                          Imagem de capa
                        </label>
                         
                        <div>
                          <div
                            className="mt-1 flex justify-center rounded-md border-2 border-dashed border-gray-600 px-10 pt-5 pb-6"
                          >
                            <div
                              className="space-y-1 text-center"
                            >
                              <svg
                                aria-hidden="true"
                                className="mx-auto h-6 w-6 text-gray-600"
                                fill="none"
                                stroke="currentColor"
                                viewBox="0 0 48 48"
                              >
                                <path
                                  d="M28 8H12a4 4 0 00-4 4v20m32-12v8m0 0v8a4 4 0 01-4 4H12a4 4 0 01-4-4v-4m32-4l-3.172-3.172a4 4 0 00-5.656 0L28 28M8 32l9.172-9.172a4 4 0 015.656 0L28 28m0 0l4 4m4-24h8m-4-4v8m-12 4h.02"
                                  strokeLinecap="round"
                                  strokeLinejoin="round"
                                  strokeWidth={2}
                                />
                              </svg>
                              <div
                                className="flex text-sm text-gray-600"
                              >
                                <label
                                  className="relative cursor-pointer rounded-md  font-medium text-primary focus-within:outline-none focus-within:ring-2 focus-within:ring-primary focus-within:ring-offset-2 hover:text-primaryHover"
                                  htmlFor="file-upload"
                                >
                                  <span>
                                    Upload a file 
                                  </span>
                                  <input
                                    accept="image/*"
                                    className="sr-only"
                                    id="file-upload"
                                    name="file-upload"
                                    onChange={[Function]}
                                    type="file"
                                  />
                                </label>
                              </div>
                            </div>
                          </div>
                        </div>
                         
                         
                      </div>
                      <div
                        className="flex flex-col space-y-2 text-left"
                      >
                        <label
                          htmlFor="level"
                        >
                          Nível
                        </label>
                         
                        <select
                          className="small-form-field focus:outline-none focus:ring-2 focus:ring-primary focus:border-transparent"
                          name="difficulty"
                          onBlur={[Function]}
                          onChange={[Function]}
                        >
                          <option
                            value={1}
                          >
                            Iniciante 
                          </option>
                           
                          <option
                            value={2}
                          >
                            Intermediário
                          </option>
                           
                          <option
                            value={3}
                          >
                            Avançado 
                          </option>
                           
                        </select>
                         
                      </div>
                      <div
                        className="flex flex-col space-y-2 text-left"
                      >
                        <label
                          htmlFor="title"
                        >
                          Tempo estimado
                        </label>
                         
                        <input
                          className="form-field focus:outline-none focus:ring-2 focus:ring-primary focus:border-transparent"
                          defaultValue=""
                          min={0}
                          name="estimatedHours"
                          onBlur={[Function]}
                          onChange={[Function]}
                          step={1}
                          type="number"
                        />
                         
                      </div>
                    </div>
                    <div
                      className="flex flex-col space-y-2 text-left"
                    >
                      <label
                        htmlFor="description"
                      >
                        Descrição
                      </label>
                       
                      <textarea
                        className="resize-none form-field focus:outline-none focus:ring-2 focus:ring-primary focus:border-transparent"
                        defaultValue=""
                        name="description"
                        onBlur={[Function]}
                        onChange={[Function]}
                        rows={4}
                      />
                       
                    </div>
                    <div
                      className="modal-action"
                    >
                      <div
                        className="flex items-center justify-between gap-4 w-full mt-8"
                      >
                        <label
                          className=" bg-primary hover:bg-primaryHover border border-primary focus:ring-blue-500 focus:ring-offset-blue-200 text-white w-full transition ease-in duration-200 text-center text-base font-semibold shadow-md focus:outline-none focus:ring-2 focus:ring-offset-2  rounded"
                          htmlFor="course-create"
                        >
                          <button
                            className="py-2 px-4 h-full w-full"
                            type="submit"
                          >
                            Criar 
                          </button>
                        </label>
                        <label
                          className="py-2 px-4 bg-white hover:bg-gray-100 border border-primary  hover:border-primaryHover hover:text-primaryHover  text-primary w-full transition ease-in duration-200 text-center text-base font-semibold shadow-md focus:outline-none focus:ring-2 focus:ring-offset-2  rounded"
                          htmlFor="course-create"
                        >
                          Cancelar 
                        </label>
                      </div>
                    </div>
                  </form>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="m-8 hidden lg:block"
        >
          <div
            className="w-full h-full"
          >
            <h2
              className="text-xl font-bold"
            >
              Olá 
              Test User
            </h2>
            <div
              className="border-y-[1px] border-grayMedium my-4 py-4"
            >
              <div
                className="grid grid-cols-4 lg:grid-cols-1 gap-y-4"
              >
                <p
                  className="italic"
                  id="noCourses"
                >
                  Não há dados suficiente
                </p>
              </div>
            </div>
            <div>
              <p
                className="font-bold"
              >
                Atividades
              </p>
               
              <div
                className="grid grid-cols-4 lg:grid-cols-1 gap-y-2"
              >
                <p
                  className="italic"
                >
                  Nenhuma atividade
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>,
  <div
    className="Toastify"
  />,
]
`;
